src/components/GallerySection/components/galleryDetails.css
.swiper-pagination-bullet {
  background: var(--color-gray) !important; /* colore pallini inattivi */
  width: 14px !important;
  height: 14px !important;
}

/* Bullet attivo */
.swiper-pagination-bullet-active {
  background: var(--color-light) !important; /* dorato Doriante */
  width: 14px !important;
  height: 14px !important;
  opacity: 1 !important;
}

.doriante-swiper .swiper-pagination {
  position: relative !important;
  display: flex;
  justify-content: center;
}
.doriante-swiper,
.doriante-swiper .swiper-wrapper,
.doriante-swiper .swiper-slide {
  height: 98%;
}

.section-title {
  font-family: Arial;
  font-weight: 700;
  font-style: Bold;
  font-size: 18px;
  line-height: 100%;
  letter-spacing: 6px;
  text-transform: uppercase;
}

